--- a/pages/food-and-cooking.html
+++ b/pages/food-and-cooking.html
@@ -23,20 +23,20 @@
         <li>Italian plates like pizza or pasta</li>
         <li>
             <span>Healthy and</span>
-            <a href="https://www.hsph.harvard.edu/nutritionsource/healthy-eating-plate/">
+            <a href="https://www.hsph.harvard.edu/nutritionsource/healthy-eating-plate/" target="_blank">
                 balanced meals    
             </a>
         </li>
         <li>Sushi or oriental cuisine classics</li>
         <li>
-            <a href="https://www.health.harvard.edu/blog/what-is-a-plant-based-diet-and-why-should-you-try-it-2018092614760">
+            <a href="https://www.health.harvard.edu/blog/what-is-a-plant-based-diet-and-why-should-you-try-it-2018092614760" target="_blank">
                 Plant-based
             </a>
             <span>alternatives</span>
         </li>
         <li>
             <span>A good</span> 
-            <a href="https://www.britannica.com/topic/fast-food">
+            <a href="https://www.britannica.com/topic/fast-food" target="_blank">
                 fast food
             </a> 
             <span>meal once in a while</span>
