--- a/pages/sports-and-health.html
+++ b/pages/sports-and-health.html
@@ -16,22 +16,22 @@
     <h2>My favourite sports:</h2>
     <ul>
         <li>
-            <a href="https://www.cdc.gov/physicalactivity/basics/pa-health/index.htm#:~:text=Regular%20physical%20activity%20is%20one,ability%20to%20do%20everyday%20activities.">
+            <a href="https://www.cdc.gov/physicalactivity/basics/pa-health/index.htm#:~:text=Regular%20physical%20activity%20is%20one,ability%20to%20do%20everyday%20activities." target="_blank">
                 Gym & Fitness 
             </a>
         </li>
         <li>
-            <a href="https://www.footballizer.com/academy/what-is-football/">
+            <a href="https://www.footballizer.com/academy/what-is-football/" target="_blank">
                 Football & 5-side
             </a>
         </li>
         <li>
-            <a href="https://en.wikipedia.org/wiki/Climbing_wall">
+            <a href="https://en.wikipedia.org/wiki/Climbing_wall" target="_blank">
                 Climbing
             </a>
         </li>
         <li>
-            <a href="https://www.betterhealth.vic.gov.au/health/healthyliving/running-and-jogging-health-benefits">
+            <a href="https://www.betterhealth.vic.gov.au/health/healthyliving/running-and-jogging-health-benefits" target="_blank">
                 Running
             </a>
         </li>
