--- a/pages/travels.html
+++ b/pages/travels.html
@@ -23,28 +23,28 @@
     <ul>
         <li>
             <span>Egypt: Sharm El Sheik and Il Cairo to see</span>
-            <a href="https://en.wikipedia.org/wiki/Giza_pyramid_complex">
+            <a href="https://en.wikipedia.org/wiki/Giza_pyramid_complex" target="_blank">
                 The pyramids of giza
             </a>
         </li>
         <li>
-            <a href="https://it.wikipedia.org/wiki/Valencia">
+            <a href="https://it.wikipedia.org/wiki/Valencia" target="_blank">
                 Valencia
             </a>
         </li>
         <li>
             <span>North Europe </span>
-            <a href="https://www.interrail.eu/en/interrail-passes/what-is-interrail">
+            <a href="https://www.interrail.eu/en/interrail-passes/what-is-interrail" target="_blank">
                 interral
             </a>
         </li>
         <li>
-            <a href="https://it.wikipedia.org/wiki/Londra">
+            <a href="https://it.wikipedia.org/wiki/Londra" target="_blank">
                London 
             </a>
         </li>
         <li>
-            <a href="https://www.thetravellingtom.com/new-york-to-miami-road-trip">
+            <a href="https://www.thetravellingtom.com/new-york-to-miami-road-trip" target="_blank">
                New York & Miami
             </a>
             <span>(coming soon)</span>
