--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homepage - Project 1</title>
-</head>
-<body>
+  </head>
+  <body>
+    <header>
+      <h1>Kreativstorm Hands-on Frontend Development Program</h1>
+      <img src="./images/kreativstorm.png" alt="Kreativstorm Logo" />
+      <h2>Project 1 - My hobbies</h2>
+    </header>
+    <main>
+      <p>
+        Welcome to my project, I'm Alessandro and here I'll present you my
+        favourite hobbies.
+      </p>
+      <p>
+        This website was created using simple HTML and following the correct
+        guidelines and best practices of this formatting language.
+      </p>
 
-    <h1>Kreativstorm Hands-on Frontend Development Program</h1>
-
-    <img src="./images/kreativstorm.png" alt="Kreativstorm Logo">
-
-    <h2>Project 1 - My hobbies</h2>
-
-    <p>Welcome to my project, I'm Alessandro and here I'll present you my favourite hobbies.</p>
-    <p>This website was created using simple HTML and following the correct guidelines and best practices of this formatting language.</p>
-
-    <a href="./pages/hobbies.html">Go to my hobbies list >> </a>
-    
-</body>
+      <a href="./pages/hobbies.html">Go to my hobbies list >> </a>
+    </main>
+  </body>
 </html>
