--- a/pages/food-and-cooking.html
+++ b/pages/food-and-cooking.html
@@ -1,53 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food and Cooking</title>
-</head>
-<body>
-    
-    <h1>Food and Cooking</h1>
+  </head>
+  <body>
+    <header>
+      <h1>Food and Cooking</h1>
 
-    <img src="../images/foods.png" alt="Food and Cooking wallpaper">
+      <nav>
+        <a href="./hobbies.html"> < Go back to my hobbies </a>
+        <br /><br />
+        <a href="../index.html"> << Go to the Homepage </a>
+        <br /><br />
+      </nav>
+    </header>
+    <main>
+      <img src="../images/foods.png" alt="Food and Cooking wallpaper" />
 
-    <p>
-        I'm a food-lover, I love to eat good foods, try new cuisines and teastes. 
-    </p>
-    <p>
-        I also enjoy spend some time cooking and I try to align this hobby with my sporting life by cooking healty foods good for my diet.
-    </p>
+      <p>
+        I'm a food-lover, I love to eat good foods, try new cuisines and
+        teastes.
+      </p>
+      <p>
+        I also enjoy spend some time cooking and I try to align this hobby with
+        my sporting life by cooking healty foods good for my diet.
+      </p>
 
-    <h2>What I like to eat and cooking:</h2>
-    <ul>
+      <h2>What I like to eat and cooking:</h2>
+      <ul>
         <li>Italian plates like pizza or pasta</li>
         <li>
-            <span>Healthy and</span>
-            <a href="https://www.hsph.harvard.edu/nutritionsource/healthy-eating-plate/" target="_blank">
-                balanced meals    
-            </a>
+          <span>Healthy and</span>
+          <a
+            href="https://www.hsph.harvard.edu/nutritionsource/healthy-eating-plate/"
+            target="_blank"
+          >
+            balanced meals
+          </a>
         </li>
         <li>Sushi or oriental cuisine classics</li>
         <li>
-            <a href="https://www.health.harvard.edu/blog/what-is-a-plant-based-diet-and-why-should-you-try-it-2018092614760" target="_blank">
-                Plant-based
-            </a>
-            <span>alternatives</span>
+          <a
+            href="https://www.health.harvard.edu/blog/what-is-a-plant-based-diet-and-why-should-you-try-it-2018092614760"
+            target="_blank"
+          >
+            Plant-based
+          </a>
+          <span>alternatives</span>
         </li>
         <li>
-            <span>A good</span> 
-            <a href="https://www.britannica.com/topic/fast-food" target="_blank">
-                fast food
-            </a> 
-            <span>meal once in a while</span>
+          <span>A good</span>
+          <a href="https://www.britannica.com/topic/fast-food" target="_blank">
+            fast food
+          </a>
+          <span>meal once in a while</span>
         </li>
-    </ul>
-
-    <br>
-
-    <a href="./hobbies.html"> < Go back to my hobbies </a>
-    <br><br>
-    <a href="../index.html"> << Go to the Homepage </a>
-
-</body>
+      </ul>
+    </main>
+  </body>
 </html>
