--- a/pages/tech-and-design.html
+++ b/pages/tech-and-design.html
@@ -1,36 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Technology and Design</title>
-</head>
-<body>
-    
-    <h1>Technology and Design</h1>
+  </head>
+  <body>
+    <header>
+      <h1>Technology and Design</h1>
 
-    <img src="../images/tech-and-design.png" alt="Technology and Design wallpaper">
+      <nav>
+        <a href="./hobbies.html"> < Go back to my hobbies </a>
+        <br /><br />
+        <a href="../index.html"> << Go to the Homepage </a>
+        <br /><br />
+      </nav>
+    </header>
+    <main>
+      <img
+        src="../images/tech-and-design.png"
+        alt="Technology and Design wallpaper"
+      />
 
-    <p>
-        I really like my job, I'm very passioned about UX/UI Design and interface development. 
-    </p>
-    <p>
-        Actually design and coding can be a pastime for me, I just need the right atmosphere, a coffee, some good music and I can enjoy the process
-    </p>
+      <p>
+        I really like my job, I'm very passioned about UX/UI Design and
+        interface development.
+      </p>
+      <p>
+        Actually design and coding can be a pastime for me, I just need the
+        right atmosphere, a coffee, some good music and I can enjoy the process
+      </p>
 
-    <h2>My favourite activities:</h2>
-    <ul>
+      <h2>My favourite activities:</h2>
+      <ul>
         <li>Create new website or mobile apps designs</li>
         <li>Programming with my favourite languages</li>
         <li>Read some tech related articles</li>
         <li>Learn new languages</li>
-    </ul>
-
-    <br>
-
-    <a href="./hobbies.html"> < Go back to my hobbies </a>
-    <br><br>
-    <a href="../index.html"> << Go to the Homepage </a>
-
-</body>
+      </ul>
+    </main>
+  </body>
 </html>
