--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My hobbies - Project 1</title>
-</head>
-<body>
+  </head>
+  <body>
+    <header>
+      <h1>My hobbies</h1>
+      
+      <nav>
+        <a href="../index.html"><< Go back to the Homepage</a>
+        <br />
+      </nav>
+    </header>
+    <main>
+      <p>
+        On this page you can see a list of my 5 favourite hobbies. These
+        activities are part of who I am and I usually do them for personal
+        pleasure.
+      </p>
+      <p>
+        Click on the link under the hobby you are interested in to get more
+        details
+      </p>
 
-    <h1>My hobbies</h1>    
-    <p>
-        On this page you can see a list of my 5 favourite hobbies. 
-        These activities are part of who I am and I usually do them for personal pleasure.
-    </p>
-
-    <p>
-        Click on the link under the hobby you are interested in to get more details
-    </p>
-
-    <ol>
+      <ol>
         <li>
-            <p>Sports and Health</p>
-            <a href="./sports-and-health.html">Go to 'Sports and Health' ></a>
+          <p>Sports and Health</p>
+          <a href="./sports-and-health.html">Go to 'Sports and Health' ></a>
         </li>
         <li>
-            <p>Travels</p>
-            <a href="./travels.html">Go to 'Travels' ></a>
+          <p>Travels</p>
+          <a href="./travels.html">Go to 'Travels' ></a>
         </li>
         <li>
-            <p>Technology and Design</p>
-            <a href="./tech-and-design.html">Go to 'Technology and Design' ></a>
+          <p>Technology and Design</p>
+          <a href="./tech-and-design.html">Go to 'Technology and Design' ></a>
         </li>
         <li>
-            <p>Food and Cooking</p>
-            <a href="./food-and-cooking.html">Go to 'Food and Cooking' ></a>
+          <p>Food and Cooking</p>
+          <a href="./food-and-cooking.html">Go to 'Food and Cooking' ></a>
         </li>
         <li>
-            <p>Social life</p>
-            <a href="./social-life.html">Go to 'Social life' ></a>
+          <p>Social life</p>
+          <a href="./social-life.html">Go to 'Social life' ></a>
         </li>
-    </ol>
-
-    <br>
-
-    <a href="../index.html"><< Go back to the Homepage</a>
-    
-</body>
+      </ol>
+    </main>
+  </body>
 </html>
