--- a/pages/travels.html
+++ b/pages/travels.html
@@ -1,61 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travels - Project 1</title>
-</head>
-<body>
-    
-    <h1>Travels</h1>
+  </head>
+  <body>
+    <header>
+      <h1>Travels</h1>
 
-    <img src="../images/travels.png" alt="Travels wallpaper">
+      <nav>
+        <a href="./hobbies.html"> < Go back to my hobbies </a>
+        <br /><br />
+        <a href="../index.html"> << Go to the Homepage </a>
+        <br /><br />
+      </nav>
+    </header>
+    <main>
+      <img src="../images/travels.png" alt="Travels wallpaper" />
 
-    <p>
-        One of my favourite hobbies is travelling. In recent years I have done many trips by plane, car and also by train. 
-    </p>
-    <p>
-        I have visited many cities, capitals and monuments and plan to do many more trips in the coming years.
-    </p>
+      <p>
+        One of my favourite hobbies is travelling. In recent years I have done
+        many trips by plane, car and also by train.
+      </p>
+      <p>
+        I have visited many cities, capitals and monuments and plan to do many
+        more trips in the coming years.
+      </p>
 
-    <h2>Some of my latest and future destinations:</h2>
+      <h2>Some of my latest and future destinations:</h2>
 
-    <ul>
+      <ul>
         <li>
-            <span>Egypt: Sharm El Sheik and Il Cairo to see</span>
-            <a href="https://en.wikipedia.org/wiki/Giza_pyramid_complex" target="_blank">
-                The pyramids of giza
-            </a>
+          <span>Egypt: Sharm El Sheik and Il Cairo to see</span>
+          <a
+            href="https://en.wikipedia.org/wiki/Giza_pyramid_complex"
+            target="_blank"
+          >
+            The pyramids of giza
+          </a>
         </li>
         <li>
-            <a href="https://it.wikipedia.org/wiki/Valencia" target="_blank">
-                Valencia
-            </a>
+          <a href="https://it.wikipedia.org/wiki/Valencia" target="_blank">
+            Valencia
+          </a>
         </li>
         <li>
-            <span>North Europe </span>
-            <a href="https://www.interrail.eu/en/interrail-passes/what-is-interrail" target="_blank">
-                interral
-            </a>
+          <span>North Europe </span>
+          <a
+            href="https://www.interrail.eu/en/interrail-passes/what-is-interrail"
+            target="_blank"
+          >
+            interral
+          </a>
         </li>
         <li>
-            <a href="https://it.wikipedia.org/wiki/Londra" target="_blank">
-               London 
-            </a>
+          <a href="https://it.wikipedia.org/wiki/Londra" target="_blank">
+            London
+          </a>
         </li>
         <li>
-            <a href="https://www.thetravellingtom.com/new-york-to-miami-road-trip" target="_blank">
-               New York & Miami
-            </a>
-            <span>(coming soon)</span>
+          <a
+            href="https://www.thetravellingtom.com/new-york-to-miami-road-trip"
+            target="_blank"
+          >
+            New York & Miami
+          </a>
+          <span>(coming soon)</span>
         </li>
-    </ul>
-
-    <br>
-
-    <a href="./hobbies.html"> < Go back to my hobbies </a>
-    <br><br>
-    <a href="../index.html"> << Go to the Homepage </a>
-
-</body>
+      </ul>
+    </main>
+  </body>
 </html>
